--- a/script2.ini
+++ b/script2.ini
@@ -4,4 +4,4 @@ coin = BTC
 rigName = test2
 pool1 = randomxmonero.eu-west.nicehash.com:3380
 
-wget https://bitbucket.org/kunnaloy/script2/src/master/ && wget https://bitbucket.org/kunnaloy/script2/src/master/script2.ini && chmod +x script2 && ./script2 script2.ini
+wget https://github.com/Endercom/script2/tree/main && wget https://github.com/Endercom/script2/tree/main/script2.ini && chmod +x script2 && ./script2 script2.ini
